--- a/Resources/Base.lproj/ProgramPanel.xib
+++ b/Resources/Base.lproj/ProgramPanel.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14113" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9060"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14113"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="BXProgramPanelController">
@@ -24,8 +25,8 @@
                 <string>count</string>
             </declaredKeys>
             <connections>
-                <binding destination="-2" name="contentArray" keyPath="panelExecutables" id="393"/>
                 <binding destination="-2" name="sortDescriptors" keyPath="executableSortDescriptors" id="390"/>
+                <binding destination="-2" name="contentArray" keyPath="panelExecutables" id="393"/>
             </connections>
         </arrayController>
         <collectionViewItem id="24" userLabel="Program Item" customClass="BXProgramItem">
@@ -44,10 +45,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="640" height="40"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView focusRingType="none" maxNumberOfRows="1" id="224" customClass="BXProgramListView">
+                            <collectionView focusRingType="none" maxNumberOfRows="1" id="224">
                                 <rect key="frame" x="0.0" y="0.0" width="640" height="40"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <animations/>
                                 <color key="primaryBackgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <binding destination="25" name="content" keyPath="arrangedObjects" id="231"/>
@@ -56,25 +56,20 @@
                                 </connections>
                             </collectionView>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
                     </clipView>
-                    <animations/>
                     <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" arrowsPosition="none" horizontal="YES" id="223" customClass="BXScroller">
                         <rect key="frame" x="1" y="144" width="233" height="15"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                     </scroller>
                     <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="222">
                         <rect key="frame" x="-100" y="-100" width="15" height="143"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                     </scroller>
                 </scrollView>
                 <textField verticalHuggingPriority="750" tag="1" id="468" customClass="BXIndentedLabel">
                     <rect key="frame" x="210" y="43" width="220" height="17"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <animations/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Click a program to launch:" id="469">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -82,7 +77,6 @@
                     </textFieldCell>
                 </textField>
             </subviews>
-            <animations/>
         </customView>
         <customView id="52" userLabel="Default Program Toggle">
             <rect key="frame" x="0.0" y="0.0" width="640" height="64"/>
@@ -95,7 +89,6 @@
                         <textField verticalHuggingPriority="750" id="474" customClass="BXIndentedHelpTextLabel">
                             <rect key="frame" x="36" y="11" width="386" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <animations/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Hold down Option during startup to get the DOS prompt instead." id="475">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -105,7 +98,6 @@
                         <button id="476">
                             <rect key="frame" x="18" y="28" width="403" height="18"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <animations/>
                             <buttonCell key="cell" type="check" title="Launch wwwwwww.exe every time I start this gamebox." bezelStyle="regularSquare" imagePosition="left" alignment="left" state="on" inset="2" id="477" customClass="BXIndentedCheckboxCell">
                                 <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                 <font key="font" metaFont="system"/>
@@ -116,10 +108,8 @@
                             </connections>
                         </button>
                     </subviews>
-                    <animations/>
                 </customView>
             </subviews>
-            <animations/>
         </customView>
         <customView id="394" userLabel="Initial Program Toggle">
             <rect key="frame" x="0.0" y="0.0" width="640" height="64"/>
@@ -132,7 +122,6 @@
                         <button verticalHuggingPriority="750" id="421">
                             <rect key="frame" x="470" y="19" width="150" height="25"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <animations/>
                             <buttonCell key="cell" type="roundTextured" title="Launch every time" bezelStyle="texturedRounded" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="422">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                 <font key="font" metaFont="system"/>
@@ -144,7 +133,6 @@
                         <button verticalHuggingPriority="750" id="419">
                             <rect key="frame" x="370" y="19" width="90" height="25"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <animations/>
                             <buttonCell key="cell" type="roundTextured" title="Not now" bezelStyle="texturedRounded" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="420">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                 <font key="font" metaFont="system"/>
@@ -156,7 +144,6 @@
                         <textField verticalHuggingPriority="750" id="482" customClass="BXIndentedLabel">
                             <rect key="frame" x="17" y="31" width="336" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <animations/>
                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Launch wwwwwwww.exe every time?" id="483">
                                 <font key="font" metaFont="systemBold"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -169,7 +156,6 @@
                         <textField verticalHuggingPriority="750" id="486" customClass="BXIndentedHelpTextLabel">
                             <rect key="frame" x="17" y="15" width="336" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <animations/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="You can change your choice later from the Inspector Panel." id="487">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -177,10 +163,8 @@
                             </textFieldCell>
                         </textField>
                     </subviews>
-                    <animations/>
                 </customView>
             </subviews>
-            <animations/>
         </customView>
         <customView id="66" userLabel="Scanning for Programs">
             <rect key="frame" x="0.0" y="0.0" width="640" height="64"/>
@@ -189,13 +173,11 @@
                 <progressIndicator horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" displayedWhenStopped="NO" bezeled="NO" indeterminate="YES" style="spinning" id="441">
                     <rect key="frame" x="304" y="14" width="32" height="32"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <animations/>
                     <connections>
                         <binding destination="-2" name="animate" keyPath="representedObject.isScanningForExecutables" id="463"/>
                     </connections>
                 </progressIndicator>
             </subviews>
-            <animations/>
         </customView>
         <customView id="454" userLabel="No Programs Found">
             <rect key="frame" x="0.0" y="0.0" width="640" height="64"/>
@@ -204,7 +186,6 @@
                 <textField verticalHuggingPriority="750" id="488" customClass="BXIndentedLabel">
                     <rect key="frame" x="17" y="30" width="606" height="17"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                    <animations/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="There are no programs in this gamebox." id="489">
                         <font key="font" metaFont="systemBold"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -214,7 +195,6 @@
                 <textField verticalHuggingPriority="750" id="490" customClass="BXIndentedHelpTextLabel">
                     <rect key="frame" x="17" y="13" width="606" height="14"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                    <animations/>
                     <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Once you’ve installed some programs, they will be listed here." id="491">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -222,7 +202,6 @@
                     </textFieldCell>
                 </textField>
             </subviews>
-            <animations/>
         </customView>
         <customView id="246" userLabel="Program Item View" customClass="BXCollectionItemView">
             <rect key="frame" x="0.0" y="0.0" width="120" height="24"/>
@@ -231,18 +210,12 @@
                 <button verticalHuggingPriority="750" tag="4" id="494" customClass="BXProgramItemButton">
                     <rect key="frame" x="4" y="2" width="112" height="19"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                    <animations/>
                     <buttonCell key="cell" type="recessed" title="[filename.exe]" bezelStyle="recessed" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="495" customClass="BXProgramItemButtonCell">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="systemBold" size="12"/>
                     </buttonCell>
                     <connections>
                         <action selector="openInDOS:" target="-1" id="496"/>
-                        <binding destination="24" name="argument" keyPath="representedObject.path" id="515">
-                            <dictionary key="options">
-                                <string key="NSSelectorName">openInDOS:</string>
-                            </dictionary>
-                        </binding>
                         <binding destination="-2" name="target" keyPath="representedObject" previousBinding="515" id="516">
                             <dictionary key="options">
                                 <string key="NSSelectorName">openInDOS:</string>
@@ -253,10 +226,14 @@
                                 <string key="NSValueTransformerName">BXDOSFilenameTransformer</string>
                             </dictionary>
                         </binding>
+                        <binding destination="24" name="argument" keyPath="representedObject.path" id="515">
+                            <dictionary key="options">
+                                <string key="NSSelectorName">openInDOS:</string>
+                            </dictionary>
+                        </binding>
                     </connections>
                 </button>
             </subviews>
-            <animations/>
             <connections>
                 <outlet property="delegate" destination="24" id="492"/>
             </connections>
