--- a/Resources/Base.lproj/Welcome.xib
+++ b/Resources/Base.lproj/Welcome.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14113" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9060"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14113"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="BXWelcomeWindowController">
@@ -15,7 +16,7 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" deferred="NO" oneShot="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="55" customClass="NSPanel">
             <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
             <rect key="contentRect" x="460" y="280" width="520" height="308"/>
@@ -24,14 +25,13 @@
                 <rect key="frame" x="0.0" y="0.0" width="520" height="308"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <customView id="83" customClass="BXBottomBar">
+                    <customView id="83">
                         <rect key="frame" x="0.0" y="0.0" width="520" height="40"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button verticalHuggingPriority="750" id="94">
                                 <rect key="frame" x="435" y="7" width="70" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                                <animations/>
                                 <buttonCell key="cell" type="roundTextured" title="Close" bezelStyle="texturedRounded" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="100">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -47,10 +47,9 @@ Gw
                             <popUpButton verticalHuggingPriority="750" id="95">
                                 <rect key="frame" x="13" y="7" width="115" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <animations/>
                                 <popUpButtonCell key="cell" type="roundTextured" title="Open recent" bezelStyle="texturedRounded" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" tag="1" imageScaling="proportionallyDown" inset="2" pullsDown="YES" selectedItem="99" id="96">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="system"/>
+                                    <font key="font" metaFont="menu"/>
                                     <menu key="menu" title="OtherViews" id="97">
                                         <items>
                                             <menuItem title="Open recent" state="on" tag="1" hidden="YES" id="99"/>
@@ -71,7 +70,6 @@ Gw
                                 </connections>
                             </popUpButton>
                         </subviews>
-                        <animations/>
                     </customView>
                     <customView id="84" customClass="BXWelcomeView">
                         <rect key="frame" x="0.0" y="40" width="520" height="268"/>
@@ -80,7 +78,6 @@ Gw
                             <button focusRingType="none" id="88" customClass="BXWelcomeButton">
                                 <rect key="frame" x="340" y="20" width="160" height="186"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                                <animations/>
                                 <buttonCell key="cell" type="square" title="Open a DOS prompt" bezelStyle="shadowlessSquare" image="prompt" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" focusRingType="none" imageScaling="proportionallyDown" inset="2" id="89" customClass="BXWelcomeButtonCell">
                                     <behavior key="behavior" lightByContents="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -94,7 +91,6 @@ Gw
                             <button focusRingType="none" id="87" customClass="BXWelcomeButton">
                                 <rect key="frame" x="180" y="20" width="160" height="186"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <animations/>
                                 <buttonCell key="cell" type="square" title="Import a new game" bezelStyle="shadowlessSquare" image="import" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" focusRingType="none" imageScaling="proportionallyDown" inset="2" id="90" customClass="BXWelcomeButtonCell">
                                     <behavior key="behavior" lightByContents="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -108,7 +104,6 @@ Gw
                             <button focusRingType="none" id="86" customClass="BXWelcomeButton">
                                 <rect key="frame" x="20" y="20" width="160" height="186"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <animations/>
                                 <buttonCell key="cell" type="square" title="Browse your games" bezelStyle="shadowlessSquare" image="gamefolder" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" focusRingType="none" imageScaling="proportionallyDown" inset="2" id="91" customClass="BXWelcomeButtonCell">
                                     <behavior key="behavior" lightByContents="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -121,7 +116,6 @@ Gw
                             <textField verticalHuggingPriority="750" id="269">
                                 <rect key="frame" x="17" y="214" width="486" height="39"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <animations/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Welcome to Boxer." id="270">
                                     <font key="font" metaFont="system" size="32"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -129,10 +123,8 @@ Gw
                                 </textFieldCell>
                             </textField>
                         </subviews>
-                        <animations/>
                     </customView>
                 </subviews>
-                <animations/>
             </view>
             <contentBorderThickness minY="41"/>
             <connections>
