--- a/Resources/Base.lproj/DOSImportWindow.xib
+++ b/Resources/Base.lproj/DOSImportWindow.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14269.14" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14113" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14269.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14113"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -22,7 +22,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="1" customClass="BXDOSWindow">
+        <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="1" customClass="BXDOSWindow">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <rect key="contentRect" x="400" y="200" width="640" height="570"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1440" height="878"/>
@@ -80,9 +80,9 @@
                                 <segmentedCell key="cell" controlSize="small" state="on" borderStyle="border" alignment="left" style="texturedSquare" trackingMode="selectAny" id="908">
                                     <font key="font" metaFont="smallSystem"/>
                                     <segments>
-                                        <segment toolTip="Toggle the Inspector Panel" image="NSRevealFreestandingTemplate" width="33" tag="1"/>
-                                        <segment toolTip="Toggle the Programs Panel" image="PanelExpandTemplate" width="33" tag="2"/>
-                                        <segment toolTip="Lock the mouse to the window" image="NSLockUnlockedTemplate" width="30" tag="3">
+                                        <segment toolTip="Toggle the Inspector Panel" image="NSRevealFreestandingTemplate" width="32" tag="1"/>
+                                        <segment toolTip="Toggle the Programs Panel" image="PanelExpandTemplate" width="31" tag="2"/>
+                                        <segment toolTip="Lock the mouse to the window" image="NSLockUnlockedTemplate" width="29" tag="3">
                                             <nil key="label"/>
                                         </segment>
                                     </segments>
